--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,24 +4,26 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".MainActivity">
+                                                   tools:context=".MainActivity"
+        >
 
 
     <ScrollView
             android:layout_width="362dp"
             android:layout_height="194dp"
-            android:layout_marginTop="21dp"
-            app:layout_constraintTop_toBottomOf="@+id/prevGuess5"
+            android:layout_marginTop="360dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="24dp"
-            app:layout_constraintBottom_toTopOf="@+id/undoGuess"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginBottom="177dp"
+            android:layout_marginEnd="22dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/nextGuesses"
             android:backgroundTint="#7E55C8"
             android:background="#A8A8A8"
-            app:layout_constraintVertical_bias="0.69">
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -37,17 +39,17 @@
             android:text="5."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="223dp"
+            android:layout_marginTop="306dp"
+            android:layout_marginEnd="108dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.689"
-            app:layout_constraintVertical_bias="0.117"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
             android:backgroundTint="#A6A6A6"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="399dp"
             android:textAlignment="viewStart"
-            android:background="#A5A5A5"/>
+            android:background="#A5A5A5"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
             android:id="@+id/prevGuess4"
@@ -56,17 +58,17 @@
             android:text="4."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="95dp"
+            android:layout_marginTop="306dp"
+            android:layout_marginEnd="231dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.251"
-            app:layout_constraintVertical_bias="0.117"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"
             android:backgroundTint="#A6A6A6"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="396dp"
             android:textAlignment="viewStart"
-            android:background="#A5A5A5"/>
+            android:background="#A5A5A5"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
             android:id="@+id/prevGuess3"
@@ -75,17 +77,17 @@
             android:text="3."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="278dp"
+            android:layout_marginTop="266dp"
+            android:layout_marginEnd="47dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.915"
-            app:layout_constraintVertical_bias="0.028"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"
             android:backgroundTint="#A6A6A6"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="423dp"
             android:textAlignment="viewStart"
-            android:background="#A5A5A5"/>
+            android:background="#A5A5A5"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
             android:id="@+id/prevGuess2"
@@ -94,36 +96,34 @@
             android:text="2."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="156dp"
+            android:layout_marginTop="266dp"
+            android:layout_marginEnd="167dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.478"
-            app:layout_constraintVertical_bias="0.028"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"
             android:backgroundTint="#A6A6A6"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="422dp"
             android:textAlignment="viewStart"
-            android:background="#A5A5A5"/>
+            android:background="#A5A5A5"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
             android:id="@+id/prevGuess1"
             android:layout_width="98dp"
             android:layout_height="31dp"
             android:text="1."
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="280dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.026"
-            app:layout_constraintVertical_bias="0.028"
             android:backgroundTint="#979797"
-            android:layout_marginBottom="8dp"
             android:textAlignment="viewStart"
-            android:background="#A5A5A5"/>
+            android:background="#A5A5A5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="34dp"
+            android:layout_marginTop="266dp"
+            android:layout_marginBottom="434dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
             android:text="Current Guess:"
@@ -150,13 +150,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
-            android:layout_marginEnd="24dp"
+            android:layout_marginTop="582dp"
+            android:layout_marginEnd="214dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.785"
-            android:backgroundTint="#5D0FB5"/>
+            app:layout_constraintVertical_bias="0.0"
+            android:backgroundTint="#5D0FB5"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="89dp"/>
 
     <Button
             android:id="@+id/startOver"
@@ -166,14 +167,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
-            android:layout_marginEnd="24dp"
+            android:layout_marginTop="646dp"
+            android:layout_marginEnd="214dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.959"
+            app:layout_constraintVertical_bias="0.0"
             android:backgroundTint="#A30000"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="25dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
             android:id="@+id/helpButton"
@@ -182,15 +183,15 @@
             android:text="Help?"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="383dp"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            android:layout_marginStart="278dp"
+            android:layout_marginTop="655dp"
             android:layout_marginEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.971"
-            app:layout_constraintVertical_bias="0.831"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"
             android:backgroundTint="#939393"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="16dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <GridLayout
             android:id="@+id/gridLayout"
@@ -331,14 +332,15 @@
             android:text="Enter Guess"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="120dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+            android:layout_marginStart="214dp"
+            android:layout_marginTop="582dp"
             android:layout_marginEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.785"
-            android:backgroundTint="#2F602B"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0"
+            android:backgroundTint="#2F602B"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="89dp"/>
 
     <TextView
             android:text="Current Guess:"
