--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="#A8A8A8"
-            android:backgroundTint="#7E55C8"
+            android:backgroundTint="#9174C6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gridLayoutPrevGuesses"
             android:layout_marginTop="16dp"
@@ -83,7 +83,7 @@
 
         <TextView
                 android:id="@+id/prevGuess1"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="0"
                 android:layout_column="0"
@@ -105,7 +105,7 @@
 
         <TextView
                 android:id="@+id/prevGuess2"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="0"
                 android:layout_column="1"
@@ -127,7 +127,7 @@
 
         <TextView
                 android:id="@+id/prevGuess3"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="0"
                 android:layout_column="2"
@@ -149,7 +149,7 @@
 
         <TextView
                 android:id="@+id/prevGuess4"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="1"
                 android:layout_column="0"
@@ -193,7 +193,7 @@
 
         <TextView
                 android:id="@+id/prevGuess6"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="1"
                 android:layout_column="2"
@@ -264,7 +264,7 @@
             android:background="#D3D3D3"
             android:ems="10"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="text|textCapSentences|textCapWords|textCapCharacters"
             android:maxLength="1"
             android:textAllCaps="true"
             android:textColor="@color/black"
@@ -272,7 +272,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="75dp"
             app:layout_constraintStart_toEndOf="@+id/gridInput_03"
-            android:layout_marginStart="16dp"/>
+            android:layout_marginStart="16dp"
+            android:capitalize="characters"/>
 
     <EditText
             android:id="@+id/gridInput_03"
@@ -281,15 +282,16 @@
             android:background="#D3D3D3"
             android:ems="10"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="text|textCapSentences|textCapWords|textCapCharacters"
             android:maxLength="1"
-            android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="28dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="75dp"
             app:layout_constraintStart_toEndOf="@+id/gridInput_02"
-            android:layout_marginStart="16dp"/>
+            android:layout_marginStart="16dp"
+            android:capitalize="characters"
+            android:textAllCaps="true"/>
 
     <EditText
             android:id="@+id/gridInput_02"
@@ -298,7 +300,7 @@
             android:background="#D3D3D3"
             android:ems="10"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="text|textCapSentences|textCapWords|textCapCharacters"
             android:maxLength="1"
             android:textAllCaps="true"
             android:textColor="@color/black"
@@ -307,7 +309,8 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="75dp"/>
+            android:layout_marginTop="75dp"
+            android:capitalize="characters"/>
 
     <EditText
             android:id="@+id/gridInput_01"
@@ -316,7 +319,7 @@
             android:background="#D3D3D3"
             android:ems="10"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="text|textCapSentences|textCapWords|textCapCharacters"
             android:maxLength="1"
             android:textAlignment="center"
             android:textAllCaps="true"
@@ -325,7 +328,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="75dp"
             app:layout_constraintEnd_toStartOf="@+id/gridInput_02"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginEnd="16dp"
+            android:capitalize="characters"/>
 
     <EditText
             android:id="@+id/gridInput_00"
@@ -334,7 +338,7 @@
             android:background="#D3D3D3"
             android:ems="10"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="text|textCapSentences|textCapWords|textCapCharacters"
             android:maxLength="1"
             android:textAlignment="center"
             android:textAllCaps="true"
@@ -343,7 +347,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="75dp"
             app:layout_constraintEnd_toStartOf="@+id/gridInput_01"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginEnd="16dp"
+            android:capitalize="characters"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
