--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   tools:context=".MainActivity"
+                                                   android:background="#1a1a1b"
+        >
 
 
     <ScrollView
@@ -12,7 +14,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="#A8A8A8"
-            android:backgroundTint="#9174C6"
+            android:backgroundTint="#818384"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gridLayoutPrevGuesses"
             android:layout_marginTop="16dp"
@@ -101,7 +103,8 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"/>
+                app:layout_constraintVertical_bias="0.0"
+                android:textColor="@color/white"/>
 
         <TextView
                 android:id="@+id/prevGuess2"
@@ -123,7 +126,8 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"/>
+                app:layout_constraintVertical_bias="0.0"
+                android:textColor="@color/white"/>
 
         <TextView
                 android:id="@+id/prevGuess3"
@@ -145,7 +149,9 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"/>
+                app:layout_constraintVertical_bias="0.0"
+                android:textColorLink="@color/white"
+                android:textColor="@color/white"/>
 
         <TextView
                 android:id="@+id/prevGuess4"
@@ -167,7 +173,8 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"/>
+                app:layout_constraintVertical_bias="0.0"
+                android:textColor="@color/white"/>
 
         <TextView
                 android:id="@+id/prevGuess5"
@@ -189,7 +196,8 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"/>
+                app:layout_constraintVertical_bias="0.0"
+                android:textColor="@color/white"/>
 
         <TextView
                 android:id="@+id/prevGuess6"
@@ -211,7 +219,8 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"/>
+                app:layout_constraintVertical_bias="0.0"
+                android:textColor="@color/white"/>
 
     </GridLayout>
 
@@ -236,7 +245,8 @@
             app:layout_constraintVertical_bias="0.023"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/white"/>
 
     <TextView
             android:id="@+id/previousGuesses"
@@ -248,26 +258,27 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="150dp"/>
+            android:layout_marginTop="150dp"
+            android:textColor="@color/white"/>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="20dp"/>
 
     <EditText
             android:id="@+id/gridInput_04"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="#D3D3D3"
+            android:background="#818384"
             android:ems="10"
             android:gravity="center"
             android:inputType="text|textCapSentences|textCapWords|textCapCharacters"
             android:maxLength="1"
             android:textAllCaps="true"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="28dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="75dp"
@@ -279,12 +290,12 @@
             android:id="@+id/gridInput_03"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="#D3D3D3"
+            android:background="#818384"
             android:ems="10"
             android:gravity="center"
             android:inputType="text|textCapSentences|textCapWords|textCapCharacters"
             android:maxLength="1"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="28dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="75dp"
@@ -297,13 +308,13 @@
             android:id="@+id/gridInput_02"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="#D3D3D3"
+            android:background="#818384"
             android:ems="10"
             android:gravity="center"
             android:inputType="text|textCapSentences|textCapWords|textCapCharacters"
             android:maxLength="1"
             android:textAllCaps="true"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="28dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -316,14 +327,14 @@
             android:id="@+id/gridInput_01"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="#D3D3D3"
+            android:background="#818384"
             android:ems="10"
             android:gravity="center"
             android:inputType="text|textCapSentences|textCapWords|textCapCharacters"
             android:maxLength="1"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="28dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="75dp"
@@ -335,14 +346,14 @@
             android:id="@+id/gridInput_00"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="#D3D3D3"
+            android:background="#818384"
             android:ems="10"
             android:gravity="center"
             android:inputType="text|textCapSentences|textCapWords|textCapCharacters"
             android:maxLength="1"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="28dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="75dp"
